fix(header): fix title wrapping

--- a/tegel/src/components/header/webcomponent-v2/header-component.scss
+++ b/tegel/src/components/header/webcomponent-v2/header-component.scss
@@ -26,6 +26,7 @@
   }
 
   .header-left {
+    flex-grow: 1;
     display: flex;
     list-style: none;
 
