--- a/tegel/src/components/header/webcomponent-v2/header-title/header-title.scss
+++ b/tegel/src/components/header/webcomponent-v2/header-title/header-title.scss
@@ -1,14 +1,55 @@
 @import '../../../../mixins/flex-center';
 
 :host {
-  @include sdds-flex-center;
+  display: block;
+  flex-grow: 1;
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  color: var(--sdds-header-nav-item-color);
+  font-weight: normal;
+  font-family: var(--sdds-font-family-headline);
+  letter-spacing: normal;
 
-  padding: 0 24px;
+  slot {
+    min-width: inherit;
+    display: block;
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: fade;
+    padding: 0 24px;
+  }
 
-  // Override, because sdds-header-title is a one-off that needs different font
-  sdds-core-header-item {
-    font-weight: normal;
-    font-family: var(--sdds-font-family-headline);
-    letter-spacing: normal;
+  .shrink-fix {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+
+    ::after {
+      content: ' ';
+      display: block;
+      height: 100%;
+      width: 24px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: linear-gradient(to right, transparent, var(--sdds-header-background));
+    }
   }
 }
+
+// slot {
+//   height: inherit;
+//   min-width: inherit;
+//   display: block;
+//   align-items: center;
+//   white-space: nowrap;
+//   overflow: hidden;
+//   text-overflow: ellipsis;
+// }
